[project]
name = "pbbox"
version = "1.0.0"
description = "Um script para criar uma bbox a partir de um ponto"
authors = [
    { name = "Tharles de Sousa Andrade", email = "irtharles@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pyproj",
    "shapely"
]

[project.scripts]
bbox = "bbox:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"